# rebuild

./: CLAUDE.md  COMMIT_CONVENTION.md  LICENSE  README.md
docs/: concepts.mdx
rebuild-config/: README.md  package.json  routes.yaml
rebuild-config/locales/: en.json  ko.json
rebuild-config/pages/dashboard/: page.yaml
rebuild-config/pages/roles/: edit.yaml
rebuild-config/pages/users/: create.yaml
rebuild-server/: README.md  pyproject.toml
rebuild-server/src/: __init__.py  database.py  main.py  models.py
rebuild-server/src/routers/: auth.py  roles.py  users.py
rebuild-ui/: .env.example  README.md  index.html  package-lock.json  package.json
rebuild-ui/public/config/: _app.yaml  _pages.yaml  _resources.yaml  _routes.yaml
rebuild-ui/src/: App.tsx  index.css
rebuild-ui/src/components/builder/: CanvasRenderer.tsx  ComponentPalette.tsx  PropertyPanel.tsx  index.ts
rebuild-ui/src/components/common/: DataTable.tsx  StatsCard.tsx  index.ts
rebuild-ui/src/components/dynamic/: DynamicPage.tsx  index.ts
rebuild-ui/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
rebuild-ui/src/components/ui/: alert-dialog.tsx  (+7 more)
rebuild-ui/src/config/: resources.ts
rebuild-ui/src/hooks/: useConfig.ts
rebuild-ui/src/lib/: config-loader.ts  config-source.ts  yaml-config.ts
rebuild-ui/src/providers/: accessControlProvider.ts  authProvider.ts  dataProvider.ts  index.ts
rebuild-ui/src/routes/: _app.yaml  _resources.yaml  _routes.yaml
rebuild-ui/src/store/: builderStore.ts  index.ts  localeStore.ts  themeStore.ts
rebuild-ui/src/types/: index.ts
(+13 files in other folders)
